# scope-vcs

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile.api  README.md  package.json  pnpm-lock.yaml  post-pre-alpha.md  railpack.json  railpack.web.json  railway.json
.github/scripts/: deploy-railway.sh
.github/workflows/: rust-workspace-checks.yml  scope-api-ci.yml  scope-cli-build.yml  scope-cli.yml  scope-core-ci.yml  scope-web-ci.yml  scope-worker-ci.yml
.scope/: repo.json
00/750ad46599/: metadata.json
01/8563ce041c/: metadata.json
02/67e069edcb/: metadata.json
02/811c7e8c33/: metadata.json
api/: Cargo.toml  railpack.json
api/src/: app.rs  config.rs  error.rs  lib.rs  main.rs  object_store.rs  persistence.rs  repo_events.rs  runtime_budgets.rs  state.rs  test_support.rs
api/src/auth/: clerk.rs  cli.rs  device.rs  mod.rs  scope.rs  shoo.rs  tokens.rs
api/src/db/: auth.rs  cleanup_queue.rs  clerk_users.rs  cli_auth.rs  cli_sessions.rs  entities.rs  locks.rs  metadata_reset.rs  metadata_schema.rs  migrations.rs  mod.rs  projection_read_models.rs  publish_apply.rs  push_staging.rs  repo_change_notifications.rs  repo_collaboration.rs  repo_effects.rs  repo_lifecycle.rs  repo_mutation.rs  repo_settings.rs  repo_tokens.rs  repo_writes.rs  repository_rows.rs  runtime.rs  schema.rs  schema_read_models.rs  schema_repository_facts.rs  test_support.rs  visibility_changes.rs
api/src/db/entities/: file_changes.rs  first_push_tokens.rs  git_push_tokens.rs  logical_commits.rs  mod.rs  pending_import_files.rs  pending_imports.rs  repo_memberships.rs  repo_settings.rs  repositories.rs  staged_update_files.rs  staged_updates.rs  users.rs  visibility_rules.rs
api/src/domain/: commit_history.rs  git_projection.rs  mod.rs  policy.rs  projection.rs  projection_views.rs  repo_actions.rs  repo_collaboration.rs  staged_updates.rs  store.rs
api/src/git/: cache.rs  content.rs  credentials.rs  import.rs  mod.rs  request_merge.rs  request_ref_public_safety.rs  request_refs.rs  storage.rs  upload.rs
api/src/git/import/: artifacts.rs  diff.rs  repo_io.rs  staging.rs
api/src/git/request_refs/: access.rs  locks.rs  tests.rs
api/src/http/: account.rs  admin.rs  cli_auth.rs  device_login.rs  file_diffs.rs  history.rs  mod.rs  origins.rs  projection_preview.rs  repo_collaboration.rs  repo_events.rs  repos.rs  request_discussions.rs  request_merges.rs  request_queue.rs  request_review.rs  requests.rs  responses.rs  review.rs  routes.rs  setup.rs  type_exports.rs
api/src/http/responses/: projections.rs  repo_collaboration.rs  requests.rs
api/src/object_store/: encrypted.rs  memory.rs  mod.rs  s3.rs
api/src/tests/: admin.rs  auth.rs  cli_auth.rs  clone_access.rs  clone_credentials.rs  commit_history.rs  cors.rs  db_foundation.rs  device_login.rs  git_binary.rs  git_http.rs  git_http_gzip.rs  git_import_validation.rs  git_projection_identity.rs  git_receive.rs  git_receive_config.rs  git_request_refs.rs  mod.rs  obsolete_routes.rs  push_intent_completion.rs  readiness.rs  repo_cleanup.rs  repo_events.rs  repo_lifecycle.rs  repo_visibility.rs  request_review.rs  requests.rs  review_diff.rs  review_publish.rs  runtime_budgets.rs  setup_tokens.rs
api/src/tests/git_request_refs/: privacy.rs
api/src/tests/requests/: editors.rs  helpers.rs
api/tests/: domain_boundary.rs  domain_git_projection.rs  domain_policy.rs  domain_projection.rs  domain_store.rs  workflows.rs
api/tests/workflows/: admin.rs  auth.rs  cli_auth.rs  clone_access.rs  commit_history.rs  device_login.rs  git_binary.rs  git_http.rs  git_http_gzip.rs  git_import_validation.rs  git_projection_identity.rs  git_receive.rs  git_receive_config.rs  git_request_refs.rs  mod.rs  push_intent_completion.rs  repo_cleanup.rs  repo_events.rs  repo_lifecycle.rs  repo_visibility.rs  request_discussions.rs  request_review.rs  requests.rs  runtime_budgets.rs
api/tests/workflows/git_request_refs/: policy.rs  privacy.rs
api/tests/workflows/requests/: editors.rs  helpers.rs  queue.rs
bench/: README.md  phase0.mjs
cli/: Cargo.toml  railpack.json
cli/distribution/: targets.json
cli/scripts/: build-railway.sh
cli/src/: api.rs  auth.rs  clone.rs  distribution.rs  git_credential.rs  git_credentials.rs  git_repo.rs  git_repo_tests.rs  git_transport.rs  init.rs  installers.rs  lib.rs  login.rs  pull.rs  push.rs  repo_config.rs  repo_config_tests.rs  request.rs  test_support.rs
cli/src/api/: requests.rs  tests.rs
cli/src/request/: actions.rs  args.rs  confirm.rs  local.rs  remote.rs  render.rs  tests.rs  text.rs
cli/src/review/: git_paths.rs  mod.rs  policy.rs  state.rs  state_tests.rs  tree.rs  tree_tests.rs  tui.rs  tui_tests.rs
cli/tests/: clone.rs  init.rs  push.rs  request.rs  review.rs
cli/tests/support/: mod.rs
crates/scope-api-contract/: Cargo.toml
crates/scope-api-contract/src/: lib.rs  routes.rs  types.rs
crates/scope-cli/: Cargo.toml
crates/scope-cli/src/: main.rs
crates/scope-crypto/: Cargo.toml
crates/scope-crypto/src/: lib.rs
crates/scope-git/: Cargo.toml
crates/scope-git/src/: lib.rs
crates/scope-server/: Cargo.toml
crates/scope-server/src/: app.rs  config.rs  lib.rs  main.rs  persistence.rs  state.rs
crates/scope-server/src/auth/: shoo.rs  tokens.rs
crates/scope-server/src/domain/: mod.rs  projection.rs
crates/scope-server/src/git/: import.rs  mod.rs  storage.rs  upload.rs
crates/scope-server/src/http/: account.rs  repos.rs  responses.rs  review.rs  setup.rs
crates/scope-server/src/tests/: api.rs  auth.rs  git_receive.rs  mod.rs  setup_tokens.rs
crates/scope-server/tests/: domain_git_projection.rs  domain_policy.rs  domain_projection.rs  domain_store.rs
dev/: README.md  scope-dev  scope-dev.ps1
plans/: request-attention-queue.html
scripts/: check-line-limit.mjs
web/: .env.example  doctor.config.json  konsistent.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  railpack.json  tsconfig.json  tsconfig.test.json  vite.config.ts
worker/: Cargo.toml  railpack.json
worker/src/: compaction.rs  git_repo.rs  main.rs  settings.rs
(+1714 files in other folders)
