[workspace]
resolver = "2"
members = [
  "crates/scope-audit",
  "crates/scope-cli",
  "crates/scope-crypto",
  "crates/scope-git",
  "crates/scope-policy",
  "crates/scope-projection",
  "crates/scope-server",
  "crates/scope-store",
  "crates/scope-worker",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "UNLICENSED"
repository = "https://github.com/adamblumoff/scope-vcs"

[workspace.dependencies]
anyhow = "1.0.100"
axum = "0.8.7"
clap = { version = "4.5.55", features = ["derive"] }
hex = "0.4.3"
hmac = "0.12.1"
http = "1.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
sha1 = "0.10.6"
sha2 = "0.10.9"
thiserror = "2.0.18"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
uuid = { version = "1.19.0", features = ["serde", "v7"] }

scope-audit = { path = "crates/scope-audit" }
scope-crypto = { path = "crates/scope-crypto" }
scope-git = { path = "crates/scope-git" }
scope-policy = { path = "crates/scope-policy" }
scope-projection = { path = "crates/scope-projection" }
scope-store = { path = "crates/scope-store" }

