[package]
name = "api"
version = "0.1.0"
edition = "2024"
license = "UNLICENSED"
repository = "https://github.com/adamblumoff/scope-vcs"

[features]
default = []
local-dev = ["scope_core/local-dev"]
test-support = ["scope_core/test-support"]

[[test]]
name = "workflows"
path = "tests/workflows.rs"
required-features = ["test-support"]

[dependencies]
anyhow = "1.0.100"
axum = "0.8.7"
base64 = "0.22.1"
flate2 = "1.1"
futures-util = { version = "0.3.32", default-features = false, features = ["std"] }
hex = "0.4.3"
hmac = "0.12.1"
http = "1.4.0"
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
getrandom = "0.3.4"
reqwest = { version = "0.12.26", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
sha1 = "0.10.6"
sha2 = "0.10.9"
scope_core = { package = "scope-core", path = "../crates/scope-core", features = ["ts"] }
scope_api_contract = { package = "scope-api-contract", path = "../crates/scope-api-contract", features = ["ts"] }
time = { version = "0.3.44", features = ["formatting"] }
tokio = { version = "1.48.0", features = ["io-util", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }

[dev-dependencies]
scope_core = { package = "scope-core", path = "../crates/scope-core", features = ["test-support", "ts"] }
tower = { version = "0.5.3", features = ["util"] }
ts-rs = "12.0.1"
