[package]
name = "scope-cli"
version = "0.1.0"
edition = "2024"
license = "UNLICENSED"
repository = "https://github.com/adamblumoff/scope-vcs"

[[bin]]
name = "scope"
path = "src/bin/scope.rs"

[[bin]]
name = "scope-cli-service"
path = "src/bin/scope-cli-service.rs"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.7"
clap = { version = "4.6.0", features = ["derive"] }
reqwest = { version = "0.12.26", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
tokio = { version = "1.48.0", features = ["fs", "macros", "net", "rt-multi-thread"] }
webbrowser = "1.0.6"

[dev-dependencies]
ts-rs = "12.0.1"

[target.'cfg(any(target_os = "macos", windows))'.dependencies]
keyring-core = "1.0.0"

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "1.0.0", features = ["keychain"] }

[target.'cfg(windows)'.dependencies]
windows-native-keyring-store = { version = "1.1.0", default-features = false }
