[package]
name = "worker"
version = "0.1.0"
edition = "2024"
license = "UNLICENSED"
repository = "https://github.com/adamblumoff/scope-vcs"

[dependencies]
anyhow = "1.0.100"
getrandom = "0.3.4"
hex = "0.4.3"
scope_core = { package = "scope-core", path = "../crates/scope-core" }
scope_git_process = { package = "scope-git-process", path = "../crates/scope-git-process" }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
