[package]
name = "scope-api-contract"
version = "0.1.0"
edition = "2024"
license = "UNLICENSED"
repository = "https://github.com/adamblumoff/scope-vcs"

[features]
default = []
ts = ["dep:ts-rs", "scope_core/ts"]

[dependencies]
scope_core = { package = "scope-core", path = "../scope-core" }
serde = { version = "1.0.228", features = ["derive"] }
ts-rs = { version = "12.0.1", optional = true }

[dev-dependencies]
serde_json = "1.0.147"
