[package]
name = "scope-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hex.workspace = true
hmac.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
uuid.workspace = true

