[package]
name = "scope-git"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hex.workspace = true
scope-policy.workspace = true
scope-projection.workspace = true
serde.workspace = true
serde_json.workspace = true
sha1.workspace = true
