[package]
name = "scope-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
http.workspace = true
jsonwebtoken.workspace = true
reqwest.workspace = true
scope-git.workspace = true
scope-policy.workspace = true
scope-projection.workspace = true
scope-store.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

